java/src/main/java/Parser/SMCDELParser.java
// Generated from SMCDEL.g4 by ANTLR 4.9
package Parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SMCDELParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VARS=1, LAW=2, OBS=3, COMMA=4, LP=5, RP=6, LSB=7, RSB=8, LCB=9, RCB=10, 
		OT=11, CT=12, EXC=13, AMP=14, PIPE=15, COLON=16, DOUBLEDASH=17, WHERE=18, 
		TRUE=19, VALID=20, COMMENT=21, NEG=22, TILDE=23, CONJ=24, DISJ=25, TOP=26, 
		BOT=27, KNOWS_THAT=28, KNOWS_WHETHER=29, WS=30, VARIABLE=31;
	public static final int
		RULE_propositions = 0, RULE_binary_formula = 1, RULE_optionally_bracketed_formula = 2, 
		RULE_formula_list = 3, RULE_variable_list = 4, RULE_formula = 5, RULE_state_law = 6, 
		RULE_observation = 7, RULE_observations = 8, RULE_query = 9, RULE_queries = 10, 
		RULE_model = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"propositions", "binary_formula", "optionally_bracketed_formula", "formula_list", 
			"variable_list", "formula", "state_law", "observation", "observations", 
			"query", "queries", "model"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'VARS'", "'LAW'", "'OBS'", "','", "'('", "')'", "'['", "']'", 
			"'{'", "'}'", "'<'", "'>'", "'!'", "'&'", "'|'", "':'", "'--'", "'WHERE?'", 
			"'TRUE?'", "'VALID?'", null, null, "'~'", null, null, "'Top'", "'Bot'", 
			"'knows that'", "'knows whether'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VARS", "LAW", "OBS", "COMMA", "LP", "RP", "LSB", "RSB", "LCB", 
			"RCB", "OT", "CT", "EXC", "AMP", "PIPE", "COLON", "DOUBLEDASH", "WHERE", 
			"TRUE", "VALID", "COMMENT", "NEG", "TILDE", "CONJ", "DISJ", "TOP", "BOT", 
			"KNOWS_THAT", "KNOWS_WHETHER", "WS", "VARIABLE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SMCDEL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SMCDELParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PropositionsContext extends ParserRuleContext {
		public Variable_listContext props;
		public TerminalNode VARS() { return getToken(SMCDELParser.VARS, 0); }
		public Variable_listContext variable_list() {
			return getRuleContext(Variable_listContext.class,0);
		}
		public PropositionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propositions; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMCDELVisitor ) return ((SMCDELVisitor<? extends T>)visitor).visitPropositions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropositionsContext propositions() throws RecognitionException {
		PropositionsContext _localctx = new PropositionsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_propositions);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			match(VARS);
			setState(25);
			((PropositionsContext)_localctx).props = variable_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Binary_formulaContext extends ParserRuleContext {
		public Binary_formulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binary_formula; }
	 
		public Binary_formulaContext() { }
		public void copyFrom(Binary_formulaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BinconjContext extends Binary_formulaContext {
		public Token left;
		public Token right;
		public TerminalNode AMP() { return getToken(SMCDELParser.AMP, 0); }
		public List<TerminalNode> VARIABLE() { return getTokens(SMCDELParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(SMCDELParser.VARIABLE, i);
		}
		public BinconjContext(Binary_formulaContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMCDELVisitor ) return ((SMCDELVisitor<? extends T>)visitor).visitBinconj(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BindisjContext extends Binary_formulaContext {
		public Token left;
		public Token right;
		public TerminalNode PIPE() { return getToken(SMCDELParser.PIPE, 0); }
		public List<TerminalNode> VARIABLE() { return getTokens(SMCDELParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(SMCDELParser.VARIABLE, i);
		}
		public BindisjContext(Binary_formulaContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMCDELVisitor ) return ((SMCDELVisitor<? extends T>)visitor).visitBindisj(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Binary_formulaContext binary_formula() throws RecognitionException {
		Binary_formulaContext _localctx = new Binary_formulaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_binary_formula);
		try {
			setState(33);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new BinconjContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(27);
				((BinconjContext)_localctx).left = match(VARIABLE);
				setState(28);
				match(AMP);
				setState(29);
				((BinconjContext)_localctx).right = match(VARIABLE);
				}
				break;
			case 2:
				_localctx = new BindisjContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(30);
				((BindisjContext)_localctx).left = match(VARIABLE);
				setState(31);
				match(PIPE);
				setState(32);
				((BindisjContext)_localctx).right = match(VARIABLE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Optionally_bracketed_formulaContext extends ParserRuleContext {
		public FormulaContext form;
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public TerminalNode LP() { return getToken(SMCDELParser.LP, 0); }
		public TerminalNode RP() { return getToken(SMCDELParser.RP, 0); }
		public Optionally_bracketed_formulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optionally_bracketed_formula; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMCDELVisitor ) return ((SMCDELVisitor<? extends T>)visitor).visitOptionally_bracketed_formula(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Optionally_bracketed_formulaContext optionally_bracketed_formula() throws RecognitionException {
		Optionally_bracketed_formulaContext _localctx = new Optionally_bracketed_formulaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_optionally_bracketed_formula);
		try {
			setState(40);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LSB:
			case OT:
			case NEG:
			case CONJ:
			case DISJ:
			case TOP:
			case BOT:
			case VARIABLE:
				enterOuterAlt(_localctx, 1);
				{
				setState(35);
				((Optionally_bracketed_formulaContext)_localctx).form = formula();
				}
				break;
			case LP:
				enterOuterAlt(_localctx, 2);
				{
				setState(36);
				match(LP);
				setState(37);
				((Optionally_bracketed_formulaContext)_localctx).form = formula();
				setState(38);
				match(RP);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Formula_listContext extends ParserRuleContext {
		public Optionally_bracketed_formulaContext optionally_bracketed_formula;
		public List<Optionally_bracketed_formulaContext> forms = new ArrayList<Optionally_bracketed_formulaContext>();
		public List<Optionally_bracketed_formulaContext> optionally_bracketed_formula() {
			return getRuleContexts(Optionally_bracketed_formulaContext.class);
		}
		public Optionally_bracketed_formulaContext optionally_bracketed_formula(int i) {
			return getRuleContext(Optionally_bracketed_formulaContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SMCDELParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SMCDELParser.COMMA, i);
		}
		public Formula_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMCDELVisitor ) return ((SMCDELVisitor<? extends T>)visitor).visitFormula_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Formula_listContext formula_list() throws RecognitionException {
		Formula_listContext _localctx = new Formula_listContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_formula_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			((Formula_listContext)_localctx).optionally_bracketed_formula = optionally_bracketed_formula();
			((Formula_listContext)_localctx).forms.add(((Formula_listContext)_localctx).optionally_bracketed_formula);
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(43);
				match(COMMA);
				setState(44);
				((Formula_listContext)_localctx).optionally_bracketed_formula = optionally_bracketed_formula();
				((Formula_listContext)_localctx).forms.add(((Formula_listContext)_localctx).optionally_bracketed_formula);
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_listContext extends ParserRuleContext {
		public Token VARIABLE;
		public List<Token> vs = new ArrayList<Token>();
		public List<TerminalNode> VARIABLE() { return getTokens(SMCDELParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(SMCDELParser.VARIABLE, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SMCDELParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SMCDELParser.COMMA, i);
		}
		public Variable_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMCDELVisitor ) return ((SMCDELVisitor<? extends T>)visitor).visitVariable_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_listContext variable_list() throws RecognitionException {
		Variable_listContext _localctx = new Variable_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variable_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			((Variable_listContext)_localctx).VARIABLE = match(VARIABLE);
			((Variable_listContext)_localctx).vs.add(((Variable_listContext)_localctx).VARIABLE);
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(51);
				match(COMMA);
				setState(52);
				((Variable_listContext)_localctx).VARIABLE = match(VARIABLE);
				((Variable_listContext)_localctx).vs.add(((Variable_listContext)_localctx).VARIABLE);
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormulaContext extends ParserRuleContext {
		public FormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula; }
	 
		public FormulaContext() { }
		public void copyFrom(FormulaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PubAnnounceBoxContext extends FormulaContext {
		public Optionally_bracketed_formulaContext announced;
		public Optionally_bracketed_formulaContext form;
		public TerminalNode LSB() { return getToken(SMCDELParser.LSB, 0); }
		public TerminalNode EXC() { return getToken(SMCDELParser.EXC, 0); }
		public TerminalNode RSB() { return getToken(SMCDELParser.RSB, 0); }
		public List<Optionally_bracketed_formulaContext> optionally_bracketed_formula() {
			return getRuleContexts(Optionally_bracketed_formulaContext.class);
		}
		public Optionally_bracketed_formulaContext optionally_bracketed_formula(int i) {
			return getRuleContext(Optionally_bracketed_formulaContext.class,i);
		}
		public PubAnnounceBoxContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMCDELVisitor ) return ((SMCDELVisitor<? extends T>)visitor).visitPubAnnounceBox(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NegContext extends FormulaContext {
		public Optionally_bracketed_formulaContext negated;
		public TerminalNode NEG() { return getToken(SMCDELParser.NEG, 0); }
		public Optionally_bracketed_formulaContext optionally_bracketed_formula() {
			return getRuleContext(Optionally_bracketed_formulaContext.class,0);
		}
		public NegContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMCDELVisitor ) return ((SMCDELVisitor<? extends T>)visitor).visitNeg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DisjContext extends FormulaContext {
		public Formula_listContext disjs;
		public TerminalNode DISJ() { return getToken(SMCDELParser.DISJ, 0); }
		public TerminalNode LP() { return getToken(SMCDELParser.LP, 0); }
		public TerminalNode RP() { return getToken(SMCDELParser.RP, 0); }
		public Formula_listContext formula_list() {
			return getRuleContext(Formula_listContext.class,0);
		}
		public DisjContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMCDELVisitor ) return ((SMCDELVisitor<? extends T>)visitor).visitDisj(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TopContext extends FormulaContext {
		public TerminalNode TOP() { return getToken(SMCDELParser.TOP, 0); }
		public TopContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMCDELVisitor ) return ((SMCDELVisitor<? extends T>)visitor).visitTop(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class KnowsthatContext extends FormulaContext {
		public Token agent;
		public Optionally_bracketed_formulaContext knows_that;
		public TerminalNode KNOWS_THAT() { return getToken(SMCDELParser.KNOWS_THAT, 0); }
		public TerminalNode VARIABLE() { return getToken(SMCDELParser.VARIABLE, 0); }
		public Optionally_bracketed_formulaContext optionally_bracketed_formula() {
			return getRuleContext(Optionally_bracketed_formulaContext.class,0);
		}
		public KnowsthatContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMCDELVisitor ) return ((SMCDELVisitor<? extends T>)visitor).visitKnowsthat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BotContext extends FormulaContext {
		public TerminalNode BOT() { return getToken(SMCDELParser.BOT, 0); }
		public BotContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMCDELVisitor ) return ((SMCDELVisitor<? extends T>)visitor).visitBot(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BinContext extends FormulaContext {
		public Binary_formulaContext binary_formula() {
			return getRuleContext(Binary_formulaContext.class,0);
		}
		public BinContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMCDELVisitor ) return ((SMCDELVisitor<? extends T>)visitor).visitBin(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConjContext extends FormulaContext {
		public Formula_listContext conjs;
		public TerminalNode CONJ() { return getToken(SMCDELParser.CONJ, 0); }
		public TerminalNode LP() { return getToken(SMCDELParser.LP, 0); }
		public TerminalNode RP() { return getToken(SMCDELParser.RP, 0); }
		public Formula_listContext formula_list() {
			return getRuleContext(Formula_listContext.class,0);
		}
		public ConjContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMCDELVisitor ) return ((SMCDELVisitor<? extends T>)visitor).visitConj(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PropContext extends FormulaContext {
		public Token p;
		public TerminalNode VARIABLE() { return getToken(SMCDELParser.VARIABLE, 0); }
		public PropContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMCDELVisitor ) return ((SMCDELVisitor<? extends T>)visitor).visitProp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class KnowswhetherContext extends FormulaContext {
		public Token agent;
		public Optionally_bracketed_formulaContext knows_whether;
		public TerminalNode KNOWS_WHETHER() { return getToken(SMCDELParser.KNOWS_WHETHER, 0); }
		public TerminalNode VARIABLE() { return getToken(SMCDELParser.VARIABLE, 0); }
		public Optionally_bracketed_formulaContext optionally_bracketed_formula() {
			return getRuleContext(Optionally_bracketed_formulaContext.class,0);
		}
		public KnowswhetherContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMCDELVisitor ) return ((SMCDELVisitor<? extends T>)visitor).visitKnowswhether(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PubAnnounceDiamondContext extends FormulaContext {
		public Optionally_bracketed_formulaContext announced;
		public Optionally_bracketed_formulaContext form;
		public TerminalNode OT() { return getToken(SMCDELParser.OT, 0); }
		public TerminalNode EXC() { return getToken(SMCDELParser.EXC, 0); }
		public TerminalNode CT() { return getToken(SMCDELParser.CT, 0); }
		public List<Optionally_bracketed_formulaContext> optionally_bracketed_formula() {
			return getRuleContexts(Optionally_bracketed_formulaContext.class);
		}
		public Optionally_bracketed_formulaContext optionally_bracketed_formula(int i) {
			return getRuleContext(Optionally_bracketed_formulaContext.class,i);
		}
		public PubAnnounceDiamondContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMCDELVisitor ) return ((SMCDELVisitor<? extends T>)visitor).visitPubAnnounceDiamond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormulaContext formula() throws RecognitionException {
		FormulaContext _localctx = new FormulaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_formula);
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new TopContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				match(TOP);
				}
				break;
			case 2:
				_localctx = new BotContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				match(BOT);
				}
				break;
			case 3:
				_localctx = new BinContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(60);
				binary_formula();
				}
				break;
			case 4:
				_localctx = new ConjContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(61);
				match(CONJ);
				setState(62);
				match(LP);
				setState(63);
				((ConjContext)_localctx).conjs = formula_list();
				setState(64);
				match(RP);
				}
				break;
			case 5:
				_localctx = new DisjContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(66);
				match(DISJ);
				setState(67);
				match(LP);
				setState(68);
				((DisjContext)_localctx).disjs = formula_list();
				setState(69);
				match(RP);
				}
				break;
			case 6:
				_localctx = new NegContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(71);
				match(NEG);
				setState(72);
				((NegContext)_localctx).negated = optionally_bracketed_formula();
				}
				break;
			case 7:
				_localctx = new KnowsthatContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(73);
				((KnowsthatContext)_localctx).agent = match(VARIABLE);
				setState(74);
				match(KNOWS_THAT);
				setState(75);
				((KnowsthatContext)_localctx).knows_that = optionally_bracketed_formula();
				}
				break;
			case 8:
				_localctx = new KnowswhetherContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(76);
				((KnowswhetherContext)_localctx).agent = match(VARIABLE);
				setState(77);
				match(KNOWS_WHETHER);
				setState(78);
				((KnowswhetherContext)_localctx).knows_whether = optionally_bracketed_formula();
				}
				break;
			case 9:
				_localctx = new PubAnnounceDiamondContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(79);
				match(OT);
				setState(80);
				match(EXC);
				setState(81);
				((PubAnnounceDiamondContext)_localctx).announced = optionally_bracketed_formula();
				setState(82);
				match(CT);
				setState(83);
				((PubAnnounceDiamondContext)_localctx).form = optionally_bracketed_formula();
				}
				break;
			case 10:
				_localctx = new PubAnnounceBoxContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(85);
				match(LSB);
				setState(86);
				match(EXC);
				setState(87);
				((PubAnnounceBoxContext)_localctx).announced = optionally_bracketed_formula();
				setState(88);
				match(RSB);
				setState(89);
				((PubAnnounceBoxContext)_localctx).form = optionally_bracketed_formula();
				}
				break;
			case 11:
				_localctx = new PropContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(91);
				((PropContext)_localctx).p = match(VARIABLE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class State_lawContext extends ParserRuleContext {
		public FormulaContext form;
		public TerminalNode LAW() { return getToken(SMCDELParser.LAW, 0); }
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public State_lawContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state_law; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMCDELVisitor ) return ((SMCDELVisitor<? extends T>)visitor).visitState_law(this);
			else return visitor.visitChildren(this);
		}
	}

	public final State_lawContext state_law() throws RecognitionException {
		State_lawContext _localctx = new State_lawContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_state_law);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(LAW);
			setState(95);
			((State_lawContext)_localctx).form = formula();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObservationContext extends ParserRuleContext {
		public Token agent;
		public Variable_listContext vs;
		public TerminalNode COLON() { return getToken(SMCDELParser.COLON, 0); }
		public TerminalNode VARIABLE() { return getToken(SMCDELParser.VARIABLE, 0); }
		public Variable_listContext variable_list() {
			return getRuleContext(Variable_listContext.class,0);
		}
		public ObservationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_observation; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMCDELVisitor ) return ((SMCDELVisitor<? extends T>)visitor).visitObservation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObservationContext observation() throws RecognitionException {
		ObservationContext _localctx = new ObservationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_observation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			((ObservationContext)_localctx).agent = match(VARIABLE);
			setState(98);
			match(COLON);
			setState(99);
			((ObservationContext)_localctx).vs = variable_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObservationsContext extends ParserRuleContext {
		public ObservationContext observation;
		public List<ObservationContext> obs = new ArrayList<ObservationContext>();
		public TerminalNode OBS() { return getToken(SMCDELParser.OBS, 0); }
		public List<ObservationContext> observation() {
			return getRuleContexts(ObservationContext.class);
		}
		public ObservationContext observation(int i) {
			return getRuleContext(ObservationContext.class,i);
		}
		public ObservationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_observations; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMCDELVisitor ) return ((SMCDELVisitor<? extends T>)visitor).visitObservations(this);
			else return visitor.visitChildren(this);
		}
	}
